# multi_stream_people_tracker

./: .dockerignore  .env.example  .gitignore  CHANGE.md  CLAUDE.md  COMMANDS.md  Dockerfile  LEARNING_NOTES.md  README.md  docker-compose.yml  note_05062026.md  pyproject.toml  reid_pipeline.py  requirements-fastreid.txt  requirements-runtime.txt  requirements.txt  setup_venv.sh
configs/: README.md  pipeline.yaml  pipeline_mmp.yaml  pipeline_mmp_10cam_quality.yaml  pipeline_mmp_nvdcf_realtime_baseline.yaml  pipeline_mmp_nvdcf_realtime_simple.yaml  pipeline_mmp_realtime_20cam.yaml  pipeline_mmp_realtime_20cam_416.yaml  pipeline_mmp_realtime_20cam_sgie.yaml  pipeline_mta.yaml  pipeline_mtmc4cam.yaml
docs/: mtmc_retrain_prep.md  production_todo.md
milestones/: 01_single_video_display.py  02_multi_video_input.py  03_batching_streammux.py  03_people_detection.py  04_people_detection.py  04_people_tracking.py  05_multi_stream_tracking.py  05_object_tracking.py  06_batching_deep_dive.py  06_osd_visualization.py  07_metadata_extraction.py  07_tiled_display.py  08_metadata_extraction.py  08_reid_stub.py  08_reid_stub_hungarian.py  09_reid_extension_stub.py
models/: README.md
old_stuff/: LEARNING_NOTES.md
reid_labels/: README.md  labels_cafe_shop.json  labels_industry_safety.json  labels_lobby.json  labels_office.json  labels_retail.json
reid_labels_exact/: labels_cafe_shop.json  labels_industry_safety.json  labels_lobby.json  labels_office.json  labels_retail.json
reid_labels_exact_from_10min/: labels_cafe_shop.json  labels_industry_safety.json  labels_lobby.json  (+2 more)
(+501 files in other folders)
